fix(css): z-index: 1 on certain Markdown layouts
Blot provides some tags that apply CSS classes that allow for basic
layout e.g., wide, inside & outside margin, and columns.

The floats were proving to overlap on images within the layouts
preventing the "image zoom/hover" plugin to really work.

--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ iframe {width: 100%;}
 .margin, .inside {
   box-sizing: border-box;
   width: 29.3333%;
+  z-index: 1;
 }
 
 .margin {  position: absolute;}
